# flexi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  setup.cfg
.github/linters/: .mypy.ini
.github/workflows/: build.yaml  coverage.yml  nox.yml  tests.yaml  tests.yml
flexi/: __init__.py  __main__.py  constants.py  core.py  types.py  ui.py  utils.py
flexi/cli/: core.py  errors.py  flags.py  generate.py  util.py
flexi/cli/handlers/: core.py
flexi/config/: __init__.py  core.py  errors.py  home.py  types.py
flexi/io/: dot.py
flexi/log/: __init__.py  core.py  exceptions.py  model.py  registrar.py
src/flexi/: __init__.py  __main__.py  app.py  constants.py  dev.py  index.scss  locations.py  theme.py  versioning.py
src/flexi/components/: ui.py  welcome.py
src/flexi/components/badge/: __init__.py  style.scss
src/flexi/components/calendar/: __init__.py  style.scss
src/flexi/components/header/: __init__.py  style.scss
src/flexi/components/status/: __init__.py  style.scss
src/flexi/components/ui/: welcome.py
src/flexi/components/wallet/: __init__.py  style.scss
src/flexi/components/welcome/: __init__.py  style.scss
src/flexi/models/database/: app.py
src/flexi/pages/: home.py
src/flexi/static/: welcome.md
src/flexi/util/: style.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_constants.py  test_core.py  test_flexi.py  test_main.py  test_model.py  test_registrar.py  test_utils.py
tests/config/: __init__.py
tests/log/: __init__.py  test_model.py  test_registrar.py
