[project]
name = "blueprint"
version = "0.1.0"
authors = [
    { name = "ellsphillips", email = "elliott.phillips.dev@gmail.com"}
]
description = "A modern python project template by @ellsphillips"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["python"]
dependencies = []

[project.urls]
Homepage = "https://github.com/ellsphillips/blueprint"
Repository = "https://github.com/ellsphillips/blueprint"
Issues = "https://github.com/ellsphillips/blueprint/issues"
Documentation = "https://github.com/ellsphillips/blueprint/blob/main/README.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bagels = "blueprint.__main__:cli"

[tool.uv]
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blueprint"]

[tool.pytest.ini_options]
markers = [
    "serial",  # used to indicate tests must not run in parallel
]

[tool.coverage.run]
relative_files = true
